# dwm

./: .clangd  .gitignore  CMakeLists.txt  Makefile  Readme.md  dwm.1
src/: base.h  config.example.h  drw.c  drw.h  dwm.c  dwm.h  log.c  log.h  main.cpp  util.h
src/modules/: dwm_c.hpp
